# openssl_tls

./: CMakeLists.txt  README.md
openssl/include/openssl/: opensslconf.h
openssl/lib/gcc_x64/: libcrypto.so.1.1  libssl.so.1.1
openssl/lib/vc_x86/: libcrypto.lib  libssl.lib
src/: sslclient.cpp  sslserver.cpp  sslserver_concurrent.cpp
